Fixed youtube button issue https://trello.com/c/UjEC9hHt/376-homepage-alignment

--- a/docroot/sites/all/themes/ambitious/sass/buttons.scss
+++ b/docroot/sites/all/themes/ambitious/sass/buttons.scss
@@ -365,18 +365,7 @@
 }
 
 .youtube-btn {
-  // position: absolute;
-  // margin-top: 20px;
-  // margin-left: 0px;
-  // margin-right: 0px;
-  // margin-bottom: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-
-  // &:after {
-  //  font-family: icomoon;
-  //  content: '\e614'
-  // }      
+   
   @include breakpoint($mobile) {
     margin-bottom:0px;
   }
